fix: btn z-index

--- a/styles/Mixins.scss
+++ b/styles/Mixins.scss
@@ -48,7 +48,6 @@
 	-webkit-user-select: none;
 	touch-action: manipulation;
 	white-space: nowrap;
-	z-index: 100 !important;
 	transition: 0.3s !important;
 
 	&:disabled {
